--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "dotenv": "^8.2.0",
     "enmap": "^5.3.1",
     "lodash.includes": "^4.3.0",
+    "lodash.indexof": "^4.0.5",
     "lodash.pull": "^4.1.0",
     "lodash.pullat": "^4.6.0",
-    "lodash.sample": "^4.2.1",
+    "lodash.random": "^3.2.0",
+    "lodash.takeright": "^4.1.1",
     "moment": "^2.27.0",
     "winston": "^3.3.3"
   },
